# MyAVProject

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/lyw/myavproject/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lyw/myavproject/: BaseActivity.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/lyw/myavproject/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
live/: CMakeLists.txt  build.gradle
live/src/androidTest/java/com/lyw/live/: ExampleInstrumentedTest.java
live/src/main/: AndroidManifest.xml
live/src/main/cpp/: RtmpPusher.cpp
live/src/main/java/com/lyw/live/: AudioParam.java  AudioStream.java  CameraHelper.java  LivePusherNew.java  VideoParam.java  VideoStream.java
live/src/test/java/com/lyw/live/: ExampleUnitTest.java
